--- a/index.html
+++ b/index.html
@@ -11,10 +11,47 @@
 
 <body>
     <header>
+        <img src="wdd230\images\Nikkolet.jpg" alt="Picture of Nikkolet Ashby">
         <h1>Nikkolet Ashby</h1>
     </header>
-    <p> Hello World!
-    </p>
+    <main>
+        <h1>wdd230: Assignment Portal</h1>
+    </main>
+    <ul>
+        <li>Lesson 02:
+            <a href="#">Assignment: Design Principles Document</a>
+        </li>
+        <li>Lesson 03:
+            <a href="#">Assignment: Website Planning Document</a>
+        </li>
+        <li>Lesson 04:
+            <a href="#">Assignment: Chamber Home Page Build</a>
+        </li>
+        <li>Lesson 05:
+            <a href="#">Assignment: Chamber Home Page Continued</a>
+        </li>
+        <li>Lesson 06:
+            <a href="#">Assignment: Responsive Design</a>
+        </li>
+        <li>Lesson 07:
+            <a href="#">Assignment: The Discover Page - Image Section</a>
+        </li>
+        <li>Lesson 08:
+            <a href="#">Assignment: Join Page</a>
+        </li>
+        <li>Lesson 09:
+            <a href="#">Assignment: The Business Directory Page</a>
+        </li>
+        <li>Lesson 10:
+            <a href="#">Assignment: Using the Weather API</a>
+        </li>
+        <li>Lesson 11:
+            <a href="#">Submission: The Chamber of Commerce Site</a>
+        </li>
+    </ul>
 </body>
+<footer>
+    <p>&copy; 2021 .:|:. Nikkolet S. Ashby .:|:. Utah </p>
+</footer>
 
 </html>
