--- a/index.html
+++ b/index.html
@@ -5,16 +5,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test - Nikkolet Ashby</title>
-    <link rel="stylesheet" href="wdd230\style.css" />
+    <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <title>Nikkolet Ashby - Assignments Portal</title>
+    <link rel="stylesheet" href="wdd230\css\index.css" />
 </head>
 
 <body>
     <header>
+        <img src="wdd230\images\pic_Nikkolet.jpg" alt="Picture of Nikkolet Ashby">
         <h1>Nikkolet Ashby</h1>
     </header>
-    <p> Hello World!
-    </p>
+    <main>
+        <h2>WDD 230: Assignment Directory</h2>
+        <hr>
+        <ul>
+            <li>Lesson 02:
+                <a href="wdd230\lesson_02.html">Title</a>
+            </li>
+            <li>Lesson 03:
+                <a href="wdd230\lesson_03.html">Title</a></li>
+            <li>Lesson 04:
+                <a href="wdd230\lesson_04.html">Title</a>
+            </li>
+            <li>Lesson 05:
+                <a href="wdd230\lesson_05.html">Title</a>
+            </li>
+            <li>Lesson 06:
+                <a href="wdd230\lesson_06.html">Title</a>
+            </li>
+            <li>Lesson 07:
+                <a href="wdd230\lesson_07.html">Title</a>
+            </li>
+            <li>Lesson 08:
+                <a href="wdd230\lesson_08.html">Title</a>
+            </li>
+            <li>Lesson 09:
+                <a href="wdd230\lesson_09.html">Title</a>
+            </li>
+            <li>Lesson 10:
+                <a href="wdd230\lesson_10.html">Title</a>
+            </li>
+            <li>Lesson 11:
+                <a href="wdd230\lesson_11.html">Title</a>
+            </li>
+        </ul>
+        <hr>
+        <p>
+            <i>Some lessons may need more than one activity/assignment link.</i>
+        </p>
+    </main>
 </body>
+<footer>
+    <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
+</footer>
 
 </html>
