--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <hr>
         <ul>
             <li>Lesson 02:
-                <a href="C:\Users\Nikki Ashby\OneDrive\Documents\WDD 230 Web Frontend Development I\wdd230\lesson_02.html">Title</a>
+                <a href="wdd230\lesson_02.htl">Title</a>
             </li>
             <li>Lesson 03:
                 <a href="wdd230\lesson_03.html">Title</a></li>
