--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <hr>
         <ul>
             <li>Lesson 02:
-                <a href="wdd230/lesson_02.htl">Title</a>
+                <a href="lesson_02.html">Title</a>
             </li>
             <li>Lesson 03:
-                <a href="wdd230/lesson_03.html">Title</a></li>
+                <a href="lesson_03.html">Title</a></li>
             <li>Lesson 04:
                 <a href="wdd230/lesson_04.html">Title</a>
             </li>
