--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="wdd230/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
     <header>
-        <img src="wdd230/images/pic_Nikkolet.jpg" alt="Picture of Nikkolet Ashby">
+        <img src="images/pic_Nikkolet.jpg" alt="Picture of Nikkolet Ashby">
         <h1>Nikkolet Ashby</h1>
     </header>
     <main>
@@ -20,33 +20,33 @@
         <hr>
         <ul>
             <li>Lesson 02:
-                <a href="wdd230/lesson_02.html">Title</a>
+                <a href="lesson_02.html">Title</a>
             </li>
             <li>Lesson 03:
-                <a href="wdd230/lesson_03.html">Title</a></li>
+                <a href="lesson_03.html">Title</a></li>
             <li>Lesson 04:
-                <a href="wdd230/lesson_04.html">Title</a>
+                <a href="lesson_04.html">Title</a>
             </li>
             <li>Lesson 05:
-                <a href="wdd230/lesson_05.html">Title</a>
+                <a href="lesson_05.html">Title</a>
             </li>
             <li>Lesson 06:
-                <a href="wdd230/lesson_06.html">Title</a>
+                <a href="lesson_06.html">Title</a>
             </li>
             <li>Lesson 07:
-                <a href="wdd230/lesson_07.html">Title</a>
+                <a href="lesson_07.html">Title</a>
             </li>
             <li>Lesson 08:
-                <a href="wdd230/lesson_08.html">Title</a>
+                <a href="lesson_08.html">Title</a>
             </li>
             <li>Lesson 09:
-                <a href="wdd230/lesson_09.html">Title</a>
+                <a href="lesson_09.html">Title</a>
             </li>
             <li>Lesson 10:
-                <a href="wdd230/lesson_10.html">Title</a>
+                <a href="lesson_10.html">Title</a>
             </li>
             <li>Lesson 11:
-                <a href="wdd230/lesson_11.html">Title</a>
+                <a href="lesson_11.html">Title</a>
             </li>
         </ul>
         <hr>
