--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
     </main>
     <footer>
         <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
+        <p>Last Updated: <span id="currentdate"></span></p>
+        <script>
+            const todaysdate = new Date();
+            console.log(todaysdate);
+        </script>
     </footer>
 </body>
 
