--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
         <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
         <p>Last Updated: <span id="currentdate"></span></p>
         <script>
+            //toLocateDateString
+            const options = {
+                weekday
+            }
             const todaysdate = new Date();
-            console.log(todaysdate);
         </script>
     </footer>
 </body>
