--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
     <footer>
         <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
-        <p>Last Updated: <span id="currentdate"></span></p>
+        <p id="currentdate">Last Updated: <span id="currentdate"></span></p>
         <script src="js/currentdate.js"></script>
     </footer>
 </body>
