--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="images/pic_Nikkolet.jpg" alt="Picture of Nikkolet Ashby">
+        <img src="images/pic_Nikkolet.jpg" alt="Nikkolet Ashby">
         <h1>Nikkolet Ashby</h1>
     </header>
     <main>
