--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="images/pic_Nikkolet.jpg" alt="Nikkolet Ashby">
+        <img src="images/pic_Nikkolet.jpg" alt="Nikkolet">
         <h1>Nikkolet Ashby</h1>
     </header>
     <main>
