--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="images/pic_Nikkolet.jpg" alt="Nikkolet">
+        <img src="images/pic_Nikkolet.jpg" alt="student picture">
         <h1>Nikkolet Ashby</h1>
     </header>
     <main>
@@ -20,33 +20,42 @@
         <hr>
         <ul>
             <li>Lesson 02:
-                <a href="lesson_02.html">Title</a>
+                <br><a href="lesson_02.html">Design Principles Document</a>
             </li>
             <li>Lesson 03:
-                <a href="lesson_03.html">Title</a></li>
+                <br><a href="lesson_03.html">Website Planning Document</a><br>
+                <a href="lesson_3_report.html">Teaching and Learning Report</a>
+            </li>
             <li>Lesson 04:
-                <a href="lesson_04.html">Title</a>
+                <br><a href="lesson_04.html">Chamber Home Page Build</a><br>
+                <a href="lesson_4_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 05:
-                <a href="lesson_05.html">Title</a>
+            <li>Lesson 05:<br>
+                <a href="lesson_05.html">Chamber Home Page Continued</a><br>
+                <a href="lesson_5_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 06:
-                <a href="lesson_06.html">Title</a>
+            <li>Lesson 06:<br>
+                <a href="lesson_06.html">Responsive Design</a><br>
+                <a href="lesson_6_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 07:
-                <a href="lesson_07.html">Title</a>
+            <li>Lesson 07:<br>
+                <a href="lesson_07.html">The Discover Page - Image Section</a><br>
+                <a href="lesson_7_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 08:
-                <a href="lesson_08.html">Title</a>
+            <li>Lesson 08:<br>
+                <a href="lesson_08.html">Join Page</a><br>
+                <a href="lesson_8_report.html">Teaching and Learning Report</a>
             </li>
             <li>Lesson 09:
-                <a href="lesson_09.html">Title</a>
+                <a href="lesson_09.html">The Business Directory Page</a>,
+                <a href="lesson_9_project.html">Teaching and Learning Report</a>
             </li>
             <li>Lesson 10:
-                <a href="lesson_10.html">Title</a>
+                <a href="lesson_10.html">Using the Weather API</a>,
+                <a href="lesson_10_project.html">Teaching and Learning Report</a>
             </li>
             <li>Lesson 11:
-                <a href="lesson_11.html">Title</a>
+                <a href="lesson_11.html">Submission: The Chamber of Commerce Site</a>
             </li>
         </ul>
         <hr>
@@ -56,8 +65,8 @@
     </main>
     <footer>
         <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
-        <p id="date">Last Updated: <span id="currentdate"></span></p>
-        <script src="js/currentdate.js"></script>
+        <p id="date ">Last Updated: <span id="currentdate "></span></p>
+        <script src="js/currentdate.js "></script>
     </footer>
 </body>
 
