--- a/index.html
+++ b/index.html
@@ -19,42 +19,52 @@
         <h2>WDD 230: Assignment Directory</h2>
         <hr>
         <ul>
-            <li>Lesson 02:
-                <br><a href="lesson_02.html">Design Principles Document</a>
+            <li>
+                <p>Lesson 02:</p>
+                <a href="lesson_02.html">Design Principles Document</a>
             </li>
-            <li>Lesson 03:
-                <br><a href="lesson_03.html">Website Planning Document</a><br>
+            <li>
+                <p>Lesson 03:</p>
+                <a href="lesson_03.html">Website Planning Document</a><br>
                 <a href="lesson_3_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 04:
-                <br><a href="lesson_04.html">Chamber Home Page Build</a><br>
+            <li>
+                <p>Lesson 04:</p>
+                <a href="lesson_04.html">Chamber Home Page Build</a><br>
                 <a href="lesson_4_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 05:<br>
+            <li>
+                <p>Lesson 05:</p>
                 <a href="lesson_05.html">Chamber Home Page Continued</a><br>
                 <a href="lesson_5_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 06:<br>
+            <li>
+                <p>Lesson 06:</p>
                 <a href="lesson_06.html">Responsive Design</a><br>
                 <a href="lesson_6_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 07:<br>
+            <li>
+                <p>Lesson 07:</p>
                 <a href="lesson_07.html">The Discover Page - Image Section</a><br>
                 <a href="lesson_7_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 08:<br>
+            <li>
+                <p>Lesson 08:</p>
                 <a href="lesson_08.html">Join Page</a><br>
                 <a href="lesson_8_report.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 09:
-                <a href="lesson_09.html">The Business Directory Page</a>,
+            <li>
+                <p>Lesson 09:</p>
+                <a href="lesson_09.html">The Business Directory Page</a><br>
                 <a href="lesson_9_project.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 10:
-                <a href="lesson_10.html">Using the Weather API</a>,
+            <li>
+                <p>Lesson 10:</p>
+                <a href="lesson_10.html">Using the Weather API</a><br>
                 <a href="lesson_10_project.html">Teaching and Learning Report</a>
             </li>
-            <li>Lesson 11:
+            <li>
+                <p>Lesson 11:</p>
                 <a href="lesson_11.html">Submission: The Chamber of Commerce Site</a>
             </li>
         </ul>
