--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <li>
                 <p>Lesson 09:</p>
                 <a href="lesson_09.html">The Business Directory Page</a><br>
-                <a href="lesson_9_project.html">Teaching and Learning Report</a>
+                <a href="lesson_9_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 10:</p>
                 <a href="lesson_10.html">Using the Weather API</a><br>
-                <a href="lesson_10_project.html">Teaching and Learning Report</a>
+                <a href="lesson_10_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 11:</p>
