--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </main>
     <footer>
         <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
-        <p id="date ">Last Updated:</p><span id="currentdate "></span>
+        <p id="date">Last Updated: <span id="currentdate"></span></p>
         <script src="js/currentdate.js "></script>
     </footer>
 </body>
