--- a/week01/index.html
+++ b/week01/index.html
@@ -22,41 +22,41 @@
         <ul>
             <li>
                 <p>Lesson 02:</p>
-                <a href="lesson_02.html">Design Principles Document</a>
+                <a href="lesson2/lesson_2.html">Design Principles Document</a>
             </li>
             <li>
                 <p>Lesson 03:</p>
-                <a href="lesson_03.html">Website Planning Document</a><br>
-                <a href="lesson_3_report.html">Teaching and Learning Report</a>
+                <a href="lesson3/lesson_3.html">Website Planning Document</a><br>
+                <a href="lesson3/lesson_3_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 04:</p>
-                <a href="lesson_04.html">Chamber Home Page Build</a><br>
+                <a href="lesson_4.html">Chamber Home Page Build</a><br>
                 <a href="lesson_4_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 05:</p>
-                <a href="lesson_05.html">Chamber Home Page Continued</a><br>
+                <a href="lesson_5.html">Chamber Home Page Continued</a><br>
                 <a href="lesson_5_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 06:</p>
-                <a href="lesson_06.html">Responsive Design</a><br>
+                <a href="lesson_6.html">Responsive Design</a><br>
                 <a href="lesson_6_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 07:</p>
-                <a href="lesson_07.html">The Discover Page - Image Section</a><br>
+                <a href="lesson_7.html">The Discover Page - Image Section</a><br>
                 <a href="lesson_7_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 08:</p>
-                <a href="lesson_08.html">Join Page</a><br>
+                <a href="lesson_8.html">Join Page</a><br>
                 <a href="lesson_8_report.html">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 09:</p>
-                <a href="lesson_09.html">The Business Directory Page</a><br>
+                <a href="lesson_9.html">The Business Directory Page</a><br>
                 <a href="lesson_9_report.html">Teaching and Learning Report</a>
             </li>
             <li>
