--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -13,8 +13,10 @@
 
 <body>
     <header>
-        <img src="images/pic_Nikkolet.jpg" alt="student picture">
-        <h1>Nikkolet Ashby</h1>
+        <div class="profile">
+            <img src="images/pic_Nikkolet.jpg" alt="student picture">
+            <h1>Nikkolet Ashby</h1>
+        </div>
     </header>
     <main>
         <h2>WDD 230: Assignment Directory</h2>
@@ -72,9 +74,12 @@
         <hr>
     </main>
     <footer>
-        <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
-        <p id="date">Last Updated: <span id="currentdate"></span></p>
-        <script src="lesson1/js/currentdate.js "></script>
+        <div class="profile">
+            <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
+            <p id="date">Last Updated: <span id="currentdate"></span></p>
+            <script src="lesson1/js/currentdate.js "></script>
+        </div>
+
     </footer>
 </body>
 
