--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="lesson1/css/style.css" />
+    <link rel="stylesheet" href="lesson1/css/normalize.css">
 </head>
 
 <body>
     <header>
         <div class="profile">
-            <img src="images/pic_Nikkolet.jpg" alt="student picture">
+            <img src="lesson1/images/pic_Nikkolet.jpg" alt="student picture">
             <h1>Nikkolet Ashby</h1>
         </div>
     </header>
