--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="lesson1/css/style.css" />
-    <link rel="stylesheet" href="lesson1/css/normalize.css">
+    <link rel="stylesheet" href="css/style.css " />
+    <link rel="stylesheet " href="css/normalize.css ">
 </head>
 
 <body>
     <header>
-        <div class="profile">
-            <img src="lesson1/images/pic_Nikkolet.jpg" alt="student picture">
+        <div class="profile ">
+            <img src="images/pic_Nikkolet.jpg " alt="student picture ">
             <h1>Nikkolet Ashby</h1>
         </div>
     </header>
@@ -24,59 +24,59 @@
         <ul>
             <li>
                 <p>Lesson 02:</p>
-                <a href="lesson2/lesson_2.html">Design Principles Document</a>
+                <a href="lesson2/lesson_2.html ">Design Principles Document</a>
             </li>
             <li>
                 <p>Lesson 03:</p>
-                <a href="lesson3/lesson_3.html">Website Planning Document</a><br>
-                <a href="lesson3/lesson_3_report.html">Teaching and Learning Report</a>
+                <a href="lesson3/lesson_3.html ">Website Planning Document</a><br>
+                <a href="lesson3/lesson_3_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 04:</p>
-                <a href="lesson_4.html">Chamber Home Page Build</a><br>
-                <a href="lesson_4_report.html">Teaching and Learning Report</a>
+                <a href="lesson_4.html ">Chamber Home Page Build</a><br>
+                <a href="lesson_4_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 05:</p>
-                <a href="lesson_5.html">Chamber Home Page Continued</a><br>
-                <a href="lesson_5_report.html">Teaching and Learning Report</a>
+                <a href="lesson_5.html ">Chamber Home Page Continued</a><br>
+                <a href="lesson_5_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 06:</p>
-                <a href="lesson_6.html">Responsive Design</a><br>
-                <a href="lesson_6_report.html">Teaching and Learning Report</a>
+                <a href="lesson_6.html ">Responsive Design</a><br>
+                <a href="lesson_6_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 07:</p>
-                <a href="lesson_7.html">The Discover Page - Image Section</a><br>
-                <a href="lesson_7_report.html">Teaching and Learning Report</a>
+                <a href="lesson_7.html ">The Discover Page - Image Section</a><br>
+                <a href="lesson_7_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 08:</p>
-                <a href="lesson_8.html">Join Page</a><br>
-                <a href="lesson_8_report.html">Teaching and Learning Report</a>
+                <a href="lesson_8.html ">Join Page</a><br>
+                <a href="lesson_8_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 09:</p>
-                <a href="lesson_9.html">The Business Directory Page</a><br>
-                <a href="lesson_9_report.html">Teaching and Learning Report</a>
+                <a href="lesson_9.html ">The Business Directory Page</a><br>
+                <a href="lesson_9_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 10:</p>
-                <a href="lesson_10.html">Using the Weather API</a><br>
-                <a href="lesson_10_report.html">Teaching and Learning Report</a>
+                <a href="lesson_10.html ">Using the Weather API</a><br>
+                <a href="lesson_10_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
                 <p>Lesson 11:</p>
-                <a href="lesson_11.html">Submission: The Chamber of Commerce Site</a>
+                <a href="lesson_11.html ">Submission: The Chamber of Commerce Site</a>
             </li>
         </ul>
         <hr>
     </main>
     <footer>
-        <div class="profile">
+        <div class="profile ">
             <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
-            <p id="date">Last Updated: <span id="currentdate"></span></p>
+            <p id="date ">Last Updated: <span id="currentdate "></span></p>
             <script src="lesson1/js/currentdate.js "></script>
         </div>
 
