--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -9,6 +9,7 @@
     <title>Nikkolet Ashby - Assignments Portal</title>
     <link rel="stylesheet" href="css/style.css " />
     <link rel="stylesheet " href="css/normalize.css ">
+    <link rel="stylesheet " href="css/medium.css ">
 </head>
 
 <body>
