--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -28,11 +28,11 @@
         <ul>
             <li>
                 <p>Lesson 02:</p>
-                <a href="lesson2/lesson_2.html ">Design Principles Document</a>
+                <a href="lesson2/lesson_2.html ">Design Principles</a>
             </li>
             <li>
                 <p>Lesson 03:</p>
-                <a href="lesson3/lesson_3.html ">Website Planning Document</a><br>
+                <a href="lesson3/lesson_3.html ">Website Planning</a><br>
                 <a href="lesson3/lesson_3_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
