--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="css/style.css " />
+    <link rel="stylesheet" href="css/small.css " />
     <link rel="stylesheet " href="css/normalize.css ">
     <link rel="stylesheet " href="css/medium.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="profile ">
-            <img src="images/pic_Nikkolet.jpg " alt="student picture ">
+            <img src="images/pic_Nikkolet.jpg " alt="student picture">
             <h1>Nikkolet Ashby</h1>
         </div>
     </header>
@@ -28,7 +28,7 @@
         <ul>
             <li>
                 <p>Lesson 02:</p>
-                <a href="lesson2/lesson_2.html ">Design Principles</a>
+                <a href="lesson2/design-principles.html ">Design Principles</a>
             </li>
             <li>
                 <p>Lesson 03:</p>
