--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -81,7 +81,7 @@
         <div class="profile ">
             <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
             <p id="date ">Last Updated: <span id="currentdate "></span></p>
-            <script src="lesson1/js/currentdate.js "></script>
+            <script src="js/currentdate.js "></script>
         </div>
 
     </footer>
