--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lesson 2 for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <title>Lesson 2</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <title>Nikkolet Ashby - Assignments Portal</title>
+    <link rel="stylesheet" href="css/small.css " />
+    <link rel="stylesheet " href="css/normalize.css ">
+    <link rel="stylesheet " href="css/medium.css ">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
-<main></main>
 
 <body>
+    <div>
+        <h3>Title: </h3>
+        <p>
+            Organization/Company:
+        </p>
+        <a href="#">Website Link: </a>
+
+    </div>
+    <div></div>
+    <div></div>
 </body>
 <footer></footer>
 
