--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,26 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="css/small.css " />
-    <link rel="stylesheet " href="css/normalize.css ">
-    <link rel="stylesheet " href="css/medium.css ">
+    <link rel="stylesheet" href="css/design-principles.css " />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <header>
+        <div class="profile ">
+            <img src="images/pic_Nikkolet.jpg " alt="student picture">
+            <h1>Nikkolet Ashby</h1>
+        </div>
+    </header>
     <div>
         <h3>Title: </h3>
         <p>
             Organization/Company:
         </p>
         <a href="#">Website Link: </a>
-
+        <img href="#" alt="Screenshot of website">
+        <p>Brief description of Website: </p>
     </div>
-    <div></div>
-    <div></div>
+    <div>
+        <h3>Title: </h3>
+        <p>
+            Organization/Company:
+        </p>
+        <a href="#">Website Link: </a>
+        <img href="#" alt="Screenshot of website">
+        <p>Brief description of Website: </p>
+    </div>
+    <div>
+        <h3>Title: </h3>
+        <p>
+            Organization/Company:
+        </p>
+        <a href="#">Website Link: </a>
+        <img href="#" alt="Screenshot of website">
+        <p>Brief description of Website: </p>
+    </div>
+
 </body>
-<footer></footer>
+<footer>
+    <div class="profile ">
+        <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
+        <p id="date ">Last Updated: <span id="currentdate"></span></p>
+        <script src="js/currentdate.js"></script>
+    </div>
+</footer>
 
 </html>
