--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,54 +7,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="css/design-principles.css " />
+    <link rel="stylesheet" href="css/large.css" />
+    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="css/small.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <header>
-        <div class="profile ">
+        <div class="profile">
             <img src="images/pic_Nikkolet.jpg " alt="student picture">
             <h1>Nikkolet Ashby</h1>
         </div>
     </header>
-    <div>
-        <h3>Title: </h3>
-        <p>
-            Organization/Company:
-        </p>
-        <a href="#">Website Link: </a>
-        <img href="#" alt="Screenshot of website">
-        <p>Brief description of Website: </p>
-    </div>
-    <div>
-        <h3>Title: </h3>
-        <p>
-            Organization/Company:
-        </p>
-        <a href="#">Website Link: </a>
-        <img href="#" alt="Screenshot of website">
-        <p>Brief description of Website: </p>
-    </div>
-    <div>
-        <h3>Title: </h3>
-        <p>
-            Organization/Company:
-        </p>
-        <a href="#">Website Link: </a>
-        <img href="#" alt="Screenshot of website">
-        <p>Brief description of Website: </p>
-    </div>
+    <main>
+        <h2>Design Principles</h2>
+        <hr>
+        <div>
 
+            <h3>PARC Proximity</h3>
+            <p>
+                The Church of Jesus Christ of Latter Day Saints
+            </p>
+            <a href="https://www.churchofjesuschrist.org/?lang=eng">thechurchofjesuschrist.org</a>
+            <img href="#" alt="Screenshot of website">
+            <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae hic repudiandae, aliquam sed esse adipisci vitae tempora provident, impedit ducimus cum. Debitis nesciunt cumque laboriosam doloribus dolorem,
+                aspernatur id labore mollitia, provident deserunt, iusto tempora odit repudiandae facere laudantium ut vitae ex est numquam rerum? Aperiam voluptatum officia quibusdam, dignissimos blanditiis necessitatibus corrupti id architecto quidem
+                deleniti consectetur enim dolorem optio deserunt cumque, aut nesciunt adipisci repellat iste iusto fuga voluptate. Fugiat, praesentium numquam, quasi neque repellendus delectus, facilis quam id rerum rem ipsa! Architecto, deleniti, ipsa,
+                doloribus maxime reiciendis numquam error facere autem obcaecati recusandae distinctio enim. Doloremque, eligendi! </p>
+        </div>
+        <div>
+            <h3>PARC Contrast</h3>
+            <p>
+                Mondly
+            </p>
+            <a href="https://app.mondly.com/home">mondly.com</a>
+            <img href="#" alt="Screenshot of website ">
+            <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente non magnam inventore nisi, nostrum itaque rem modi tenetur mollitia, quam ipsa exercitationem ullam libero adipisci praesentium quaerat quis eum
+                error, nihil quia perferendis velit omnis debitis similique. Assumenda iusto doloribus sapiente dolorem excepturi temporibus, hic quo eos quibusdam iste exercitationem aliquam repudiandae non. Obcaecati autem consequatur eum iusto in iure
+                ex rem rerum, doloremque accusamus aliquam delectus atque veniam sed unde? Hic iste porro, veritatis sequi voluptates adipisci rem, laudantium quod, magni ex possimus nostrum alias consectetur. Sit eveniet deserunt dolor veritatis harum
+                officia optio, ducimus, cumque molestiae architecto esse.</p>
+        </div>
+        <div>
+            <h3>White Space and Clean Design</h3>
+            <p>
+                Duolingo
+            </p>
+            <a href="https://www.duolingo.com/learn">duolingo.com</a>
+            <img href="# " alt="Screenshot of website ">
+            <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nisi repellendus sequi in ab. Consequuntur accusamus autem eligendi laborum sit facilis explicabo expedita sunt culpa, hic ipsum, impedit eos. Voluptas
+                aspernatur voluptatum quis unde nam voluptatem iste nemo totam sequi velit fugiat vel voluptate quod quasi, beatae eos perspiciatis debitis quisquam necessitatibus, et minus ipsum dolores? Eius neque itaque animi commodi, nihil optio deserunt
+                obcaecati, alias libero quam, laboriosam consectetur voluptas. Iure ipsa sed veniam error aperiam, aliquam explicabo nemo harum, eveniet ad repellendus porro est esse a asperiores, ratione pariatur quis nostrum officiis in quisquam earum!
+                Voluptatum, dolorum saepe?</p>
+        </div>
+    </main>
+    <hr>
 </body>
 <footer>
     <div class="profile ">
         <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
-        <p id="date ">Last Updated: <span id="currentdate"></span></p>
-        <script src="js/currentdate.js"></script>
+        <p id="date ">Last Updated: <span id="currentdate "></span></p>
+        <script src="js/currentdate.js "></script>
     </div>
 </footer>
 
