--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -56,7 +56,7 @@
                 Duolingo
             </p>
             <a href="https://www.duolingo.com/learn">duolingo.com</a>
-            <img href="# " alt="Screenshot of website ">
+            <img href="images\www.duolingo.com_learn (2).png" alt="Screenshot of website ">
             <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nisi repellendus sequi in ab. Consequuntur accusamus autem eligendi laborum sit facilis explicabo expedita sunt culpa, hic ipsum, impedit eos. Voluptas
                 aspernatur voluptatum quis unde nam voluptatem iste nemo totam sequi velit fugiat vel voluptate quod quasi, beatae eos perspiciatis debitis quisquam necessitatibus, et minus ipsum dolores? Eius neque itaque animi commodi, nihil optio deserunt
                 obcaecati, alias libero quam, laboriosam consectetur voluptas. Iure ipsa sed veniam error aperiam, aliquam explicabo nemo harum, eveniet ad repellendus porro est esse a asperiores, ratione pariatur quis nostrum officiis in quisquam earum!
