--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -22,53 +22,56 @@
             <h1>Nikkolet Ashby</h1>
         </div>
     </header>
+    <h2>Design Principles</h2>
     <main>
-        <h2>Design Principles</h2>
-        <hr>
-        <div>
+
+
+        <div class="grid">
 
             <h3>PARC Proximity</h3>
             <p>
                 The Church of Jesus Christ of Latter Day Saints
             </p>
             <a href="https://www.churchofjesuschrist.org/?lang=eng">thechurchofjesuschrist.org</a>
-            <img href="#" alt="Screenshot of website">
+            <img src="images\www.churchofjesuschrist.org__lang=eng (1).png" alt="Screenshot of website">
             <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae hic repudiandae, aliquam sed esse adipisci vitae tempora provident, impedit ducimus cum. Debitis nesciunt cumque laboriosam doloribus dolorem,
                 aspernatur id labore mollitia, provident deserunt, iusto tempora odit repudiandae facere laudantium ut vitae ex est numquam rerum? Aperiam voluptatum officia quibusdam, dignissimos blanditiis necessitatibus corrupti id architecto quidem
                 deleniti consectetur enim dolorem optio deserunt cumque, aut nesciunt adipisci repellat iste iusto fuga voluptate. Fugiat, praesentium numquam, quasi neque repellendus delectus, facilis quam id rerum rem ipsa! Architecto, deleniti, ipsa,
                 doloribus maxime reiciendis numquam error facere autem obcaecati recusandae distinctio enim. Doloremque, eligendi! </p>
         </div>
-        <div>
+        <div class="grid">
             <h3>PARC Contrast</h3>
             <p>
                 Mondly
             </p>
             <a href="https://app.mondly.com/home">mondly.com</a>
-            <img href="#" alt="Screenshot of website ">
+            <img src="images\app.mondly.com_home.png" alt="Screenshot of website ">
             <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente non magnam inventore nisi, nostrum itaque rem modi tenetur mollitia, quam ipsa exercitationem ullam libero adipisci praesentium quaerat quis eum
                 error, nihil quia perferendis velit omnis debitis similique. Assumenda iusto doloribus sapiente dolorem excepturi temporibus, hic quo eos quibusdam iste exercitationem aliquam repudiandae non. Obcaecati autem consequatur eum iusto in iure
                 ex rem rerum, doloremque accusamus aliquam delectus atque veniam sed unde? Hic iste porro, veritatis sequi voluptates adipisci rem, laudantium quod, magni ex possimus nostrum alias consectetur. Sit eveniet deserunt dolor veritatis harum
                 officia optio, ducimus, cumque molestiae architecto esse.</p>
         </div>
-        <div>
+        <div class="grid">
             <h3>White Space and Clean Design</h3>
             <p>
                 Duolingo
             </p>
             <a href="https://www.duolingo.com/learn">duolingo.com</a>
-            <img href="images\www.duolingo.com_learn (2).png" alt="Screenshot of website ">
+            <img src="images\www.duolingo.com_learn (2).png" alt="Screenshot of website ">
             <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nisi repellendus sequi in ab. Consequuntur accusamus autem eligendi laborum sit facilis explicabo expedita sunt culpa, hic ipsum, impedit eos. Voluptas
                 aspernatur voluptatum quis unde nam voluptatem iste nemo totam sequi velit fugiat vel voluptate quod quasi, beatae eos perspiciatis debitis quisquam necessitatibus, et minus ipsum dolores? Eius neque itaque animi commodi, nihil optio deserunt
                 obcaecati, alias libero quam, laboriosam consectetur voluptas. Iure ipsa sed veniam error aperiam, aliquam explicabo nemo harum, eveniet ad repellendus porro est esse a asperiores, ratione pariatur quis nostrum officiis in quisquam earum!
                 Voluptatum, dolorum saepe?</p>
         </div>
     </main>
-    <hr>
+    <button><a href="lesson1/index.html">Home</a></button>
+
+
 </body>
 <footer>
     <div class="profile ">
         <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
-        <p id="date ">Last Updated: <span id="currentdate "></span></p>
+        <p id="date">Last Updated: <span id="currentdate"></span></p>
         <script src="js/currentdate.js "></script>
     </div>
 </footer>
