--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -64,7 +64,13 @@
                 Voluptatum, dolorum saepe?</p>
         </div>
     </main>
-    <button><a href="lesson1/index.html">Home</a></button>
+    <nav>
+        <ul>
+            <li>
+                <button><a href="lesson1/index.html">Home</a></button></li>
+        </ul>
+    </nav>
+
 
 
 </body>
