--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="css/large.css" />
-    <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/small.css" />
+    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="css/large.css" />
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -66,8 +68,8 @@
     </main>
     <nav>
         <ul>
-            <li>
-                <button><a href="lesson1/index.html">Home</a></button></li>
+            <li><button><a href="lesson1/index.html">Home</a></button></li>
+
         </ul>
     </nav>
 
