--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -19,18 +19,16 @@
 
 <body>
     <header>
-        <div class="profile">
-            <img src="images/pic_Nikkolet.jpg " alt="student picture">
-            <h1>Nikkolet Ashby</h1>
-        </div>
+        <h1>Design Principles</h1>
+        <p>Nikkolet Ashby</p>
     </header>
-    <h2>Design Principles</h2>
+
     <main>
 
 
         <div class="grid">
 
-            <h3>PARC Proximity</h3>
+            <h2>PARC Proximity</h2>
             <p>
                 The Church of Jesus Christ of Latter Day Saints
             </p>
@@ -42,7 +40,7 @@
                 doloribus maxime reiciendis numquam error facere autem obcaecati recusandae distinctio enim. Doloremque, eligendi! </p>
         </div>
         <div class="grid">
-            <h3>PARC Contrast</h3>
+            <h2>PARC Contrast</h2>
             <p>
                 Mondly
             </p>
@@ -54,7 +52,7 @@
                 officia optio, ducimus, cumque molestiae architecto esse.</p>
         </div>
         <div class="grid">
-            <h3>White Space and Clean Design</h3>
+            <h2>White Space and Clean Design</h2>
             <p>
                 Duolingo
             </p>
