--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -34,10 +34,9 @@
             </p>
             <a href="https://www.churchofjesuschrist.org/?lang=eng">thechurchofjesuschrist.org</a>
             <img src="images\www.churchofjesuschrist.org__lang=eng (1).png" alt="Screenshot of website">
-            <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae hic repudiandae, aliquam sed esse adipisci vitae tempora provident, impedit ducimus cum. Debitis nesciunt cumque laboriosam doloribus dolorem,
-                aspernatur id labore mollitia, provident deserunt, iusto tempora odit repudiandae facere laudantium ut vitae ex est numquam rerum? Aperiam voluptatum officia quibusdam, dignissimos blanditiis necessitatibus corrupti id architecto quidem
-                deleniti consectetur enim dolorem optio deserunt cumque, aut nesciunt adipisci repellat iste iusto fuga voluptate. Fugiat, praesentium numquam, quasi neque repellendus delectus, facilis quam id rerum rem ipsa! Architecto, deleniti, ipsa,
-                doloribus maxime reiciendis numquam error facere autem obcaecati recusandae distinctio enim. Doloremque, eligendi! </p>
+            <p><strong>Description</strong><br>In the website above, The Church of Jesus Christ of Latter-Day Saints utilizes proximity beautifully to optimize the user experience.<br><br>The space in the grid-gap helps separate the different talks, articles,
+                and videos so users can clearly distinguish between them.In addition, the proximity between the images and the title is within the div element, which helps give context to the picture.<br><br>For example, it is enjoyable while browsing
+                that the title is over the image when it is a talk, but when it is a news article, the title is below the picture. This proximity also separates what kind of information you will be looking at when you click the image.</p>
         </div>
         <div class="grid">
             <h2>PARC Contrast</h2>
@@ -46,10 +45,10 @@
             </p>
             <a href="https://app.mondly.com/home">mondly.com</a>
             <img src="images\app.mondly.com_home.png" alt="Screenshot of website ">
-            <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente non magnam inventore nisi, nostrum itaque rem modi tenetur mollitia, quam ipsa exercitationem ullam libero adipisci praesentium quaerat quis eum
-                error, nihil quia perferendis velit omnis debitis similique. Assumenda iusto doloribus sapiente dolorem excepturi temporibus, hic quo eos quibusdam iste exercitationem aliquam repudiandae non. Obcaecati autem consequatur eum iusto in iure
-                ex rem rerum, doloremque accusamus aliquam delectus atque veniam sed unde? Hic iste porro, veritatis sequi voluptates adipisci rem, laudantium quod, magni ex possimus nostrum alias consectetur. Sit eveniet deserunt dolor veritatis harum
-                officia optio, ducimus, cumque molestiae architecto esse.</p>
+            <p><strong>Description</strong><br> Mondly has a clear contrast on its website, an engaging color palette. I love how the text is white, the background a light blue, and the outline colors of each icon are different yet contrast well with its
+                environment.
+                <br><br>The colors in the menu icons had a white outline with a background that matched the rest of the screen background. This strategy helps give subtleness to the menu options and emphasizes the icons in the center of the screen.<br><br>The
+                crown icon stands out boldly in the top right corner without taking away from the website. The dark blue on the icons on the right side helps to contrast the background but helps other icons stand out.</p>
         </div>
         <div class="grid">
             <h2>White Space and Clean Design</h2>
@@ -58,10 +57,9 @@
             </p>
             <a href="https://www.duolingo.com/learn">duolingo.com</a>
             <img src="images\www.duolingo.com_learn (2).png" alt="Screenshot of website ">
-            <p>Brief description of Website: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nisi repellendus sequi in ab. Consequuntur accusamus autem eligendi laborum sit facilis explicabo expedita sunt culpa, hic ipsum, impedit eos. Voluptas
-                aspernatur voluptatum quis unde nam voluptatem iste nemo totam sequi velit fugiat vel voluptate quod quasi, beatae eos perspiciatis debitis quisquam necessitatibus, et minus ipsum dolores? Eius neque itaque animi commodi, nihil optio deserunt
-                obcaecati, alias libero quam, laboriosam consectetur voluptas. Iure ipsa sed veniam error aperiam, aliquam explicabo nemo harum, eveniet ad repellendus porro est esse a asperiores, ratione pariatur quis nostrum officiis in quisquam earum!
-                Voluptatum, dolorum saepe?</p>
+            <p><strong>Description</strong><br>Duolingo demonstrates that less is more. The white space and clean design help so that you aren't distracted by other colors or designs on the page.<br><br>This decluttered technique helps emphasize the icons
+                displayed. Some menu options have a subtle grey outline, the same background color as the rest. On the menu options at the bottom of the screen, the active link has color while the rest has none.<br><br>This method helps you know which
+                page you are on without title text. The navbar on the top has smaller icons that help make the site visually pleasing without emphasizing so much color.</p>
         </div>
     </main>
     <nav>
