--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -63,7 +63,7 @@
     </main>
     <nav>
         <ul>
-            <li><button><a href="lesson1/index.html">Home</a></button></li>
+            <li><button><a href="../index.html">Home</a></button></li>
 
         </ul>
     </nav>
