--- a/lesson3/lesson_3.html
+++ b/lesson3/lesson_3.html
@@ -8,10 +8,49 @@
     <meta name="description" content="Lesson 3 for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Lesson 3</title>
 </head>
-<main></main>
+<header></header>
+<nav>
+    <ul>
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">Discover</a>
+        </li>
+        <li>
+            <a href="#">Directory</a>
+        </li>
+        <li>
+            <a href="#">Join</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+        </li>
+    </ul>
+</nav>
 
 <body>
-
+    <section>
+        <h1>Purpose</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sequi deserunt doloribus harum tenetur sed repudiandae maxime, vitae quae, fuga natus illum nam inventore reprehenderit qui blanditiis optio eligendi rem necessitatibus ullam. Voluptatibus
+            laudantium est, adipisci rerum tempora provident saepe nihil. Culpa distinctio rerum hic molestias voluptatem magni nam atque!
+        </p>
+    </section>
+    <section>
+        <h1>Target Audience</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
+            voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
+    </section>
+    <section>
+        <h1>Scenarios</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
+            voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
+    </section>
+    <section>
+        <h1>Site Map</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
+            voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
+    </section>
 </body>
 <footer>
 
