--- a/lesson3/lesson_3.html
+++ b/lesson3/lesson_3.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lesson 3 for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <title>Lesson 3</title>
+    <title>Learning for All</title>
 </head>
-<header></header>
+<header>Insert Logo here</header>
 <nav>
     <ul>
         <li>
@@ -53,7 +53,8 @@
     </section>
 </body>
 <footer>
-
+    <p>.:.Contact Information.:.</p>
+    <a href="#">Map link</a>
 </footer>
 
 </html>
